WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230159
Send preference updates to the GPU Process
https://bugs.webkit.org/show_bug.cgi?id=230159
Summary
Send preference updates to the GPU Process
Per Arne Vollan
Reported
2021-09-10 09:52:15 PDT
Like the WebContent process, the GPU process should also receive preference updates since it is blocking the preference service in the sandbox.
Attachments
Patch
(9.68 KB, patch)
2021-09-10 10:02 PDT
,
Per Arne Vollan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(9.67 KB, patch)
2021-09-10 11:08 PDT
,
Per Arne Vollan
bfulgham
: review+
Details
Formatted Diff
Diff
Patch
(9.93 KB, patch)
2021-09-13 11:13 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2021-09-10 09:52:58 PDT
<
rdar://81049367
>
Per Arne Vollan
Comment 2
2021-09-10 10:02:16 PDT
Created
attachment 437886
[details]
Patch
chris fleizach
Comment 3
2021-09-10 10:44:41 PDT
Comment on
attachment 437886
[details]
Patch AuxiliaryProcessCocoa.mm:166:1: error: extraneous closing brace ('}')
Per Arne Vollan
Comment 4
2021-09-10 11:08:33 PDT
Created
attachment 437891
[details]
Patch
Per Arne Vollan
Comment 5
2021-09-10 11:09:10 PDT
(In reply to chris fleizach from
comment #3
)
> Comment on
attachment 437886
[details]
> Patch > > AuxiliaryProcessCocoa.mm:166:1: error: extraneous closing brace ('}')
Patch updated. Thanks for reviewing!
Brent Fulgham
Comment 6
2021-09-10 11:21:19 PDT
Comment on
attachment 437891
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=437891&action=review
r=me
> Source/WebKit/Shared/Cocoa/AuxiliaryProcessCocoa.mm:134 > +id AuxiliaryProcess::decodePreferenceValue(const std::optional<String>& encodedValue)
Oh, nice! We have centralized this now.
> Source/WebKit/Shared/Cocoa/AuxiliaryProcessCocoa.mm:143 > + auto classes = [NSSet setWithArray:@[[NSString class], [NSNumber class], [NSDate class], [NSDictionary class], [NSArray class], [NSData class]]];
I wonder if there is any perf benefit to making this a "NeverDestroyed" thing, since we presumably construct this set every time we try to decode preference values.
Per Arne Vollan
Comment 7
2021-09-13 11:11:11 PDT
(In reply to Brent Fulgham from
comment #6
)
> Comment on
attachment 437891
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=437891&action=review
> > r=me > > > Source/WebKit/Shared/Cocoa/AuxiliaryProcessCocoa.mm:134 > > +id AuxiliaryProcess::decodePreferenceValue(const std::optional<String>& encodedValue) > > Oh, nice! We have centralized this now. > > > Source/WebKit/Shared/Cocoa/AuxiliaryProcessCocoa.mm:143 > > + auto classes = [NSSet setWithArray:@[[NSString class], [NSNumber class], [NSDate class], [NSDictionary class], [NSArray class], [NSData class]]]; > > I wonder if there is any perf benefit to making this a "NeverDestroyed" > thing, since we presumably construct this set every time we try to decode > preference values.
That is a good point. I think there will be a performance benefit from this, although since this should not be a hot path, I think it also could be good to avoid the small added memory cost by making this NeverDestroyed. Thanks for reviewing!
Per Arne Vollan
Comment 8
2021-09-13 11:13:42 PDT
Created
attachment 438058
[details]
Patch
EWS
Comment 9
2021-09-13 15:01:47 PDT
Committed
r282364
(
241627@main
): <
https://commits.webkit.org/241627@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 438058
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug